--- a/src/app/pages/calendario/calendario.page.scss
+++ b/src/app/pages/calendario/calendario.page.scss
@@ -1,3 +1,11 @@
 .grid-background{
     background: url("../../../assets/icon/lo.png");
 }
+.buttonss{
+    background: transparent;
+    border: solid 1px white;
+    border-radius: 5px;
+    box-sizing: unset;
+    box-shadow: none !important;
+    margin-top: 15px;
+  }
