--- a/src/app/pages/carnetjugador/carnetjugador.page.html
+++ b/src/app/pages/carnetjugador/carnetjugador.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button text=" " defaultHref="/jugadores"></ion-back-button>
   </ion-buttons>
-  <ion-avatar slot="end"><img src="../assets/icon/logoLiga.png"></ion-avatar>
+  <ion-thumbnail slot="end"><img src="../assets/icon/logoLiga.png"></ion-thumbnail>
     <ion-title size="undefined" style="font-family:Times" align="center">Carnet del Jugador</ion-title>
   </ion-toolbar>
 </ion-header>
