--- a/src/app/pages/ingresoinforme/ingresoinforme.page.html
+++ b/src/app/pages/ingresoinforme/ingresoinforme.page.html
@@ -75,7 +75,7 @@
 
   <!-- goles -->
 
-  <!-- <ion-row style="background-color: rgb(156, 217, 238);">
+  <ion-row style="background-color: rgb(156, 217, 238);">
 
     <ion-col text-center ><b>GOLES DEL PARTIDO</b></ion-col>     
   </ion-row>
@@ -86,10 +86,10 @@
     <ion-col text-center size="5"><b>EQUIPO 2</b></ion-col>
   </ion-row>
 
-  <ion-row style="background-color: rgb(236, 250, 255);"> -->
+  <ion-row style="background-color: rgb(236, 250, 255);">
 
     <!-- goles equipo 1 -->
-  <!--  <ion-col size="5">
+ <ion-col size="5">
     <ion-row  *ngFor="let item of golesequipo1">
       <ion-col>
       
@@ -103,10 +103,10 @@
     </ion-col>
     </ion-row>
   </ion-col>
-  <ion-col size="2"></ion-col> -->
+  <ion-col size="2"></ion-col> 
 
 <!-- goles EQUIPO 2 -->
- <!--  <ion-col size="5">
+  <ion-col size="5">
     <ion-row>
       <ion-col>
       
@@ -119,7 +119,7 @@
     </ion-col>
     </ion-row>
   </ion-col>
-  </ion-row> -->
+  </ion-row> 
 
     <!-- fin goles -->
 
