--- a/src/app/pages/equipos/equipos.page.html
+++ b/src/app/pages/equipos/equipos.page.html
@@ -3,7 +3,7 @@
       <ion-buttons slot="start">
           <ion-back-button text=" " defaultHref="/inicio"></ion-back-button>
       </ion-buttons>
-      <ion-avatar slot="end"><img src="../assets/icon/logoLiga.png"></ion-avatar>
+      <ion-thumbnail slot="end"><img src="../assets/icon/logoLiga.png"></ion-thumbnail>
        <ion-title size="undefined" style="font-family:Times" align="center">Equipos</ion-title>
   </ion-toolbar>
   <!-- BUSCAR EQUIPOS -->
@@ -16,7 +16,7 @@
   <ion-grid>
     <ion-label style="font-family:'Franklin Gothic Medium'">FILTROS</ion-label>
     <ion-row>
-      <ion-col size="6">
+     <!--  <ion-col size="6">
         <ion-item-group>
           <ion-item>
               <ion-label position="floating" ></ion-label>
@@ -25,12 +25,12 @@
              </ion-select>
             </ion-item>
         </ion-item-group>
-      </ion-col>
+      </ion-col> -->
       <ion-col size="6">
         <ion-item-group>
           <ion-item>
             <ion-label position="floating" ></ion-label>
-             <ion-select placeholder="CATEGORIA"  *ngIf="lista_categoria.length > 0"   [(ngModel)]="idcategoria" (ionChange)="cargarEquipo()">
+             <ion-select placeholder="CATEGORIA"  [(ngModel)]="idcategoria" (ionChange)="cargarEquipo()">
                <ion-select-option *ngFor="let item of lista_categoria" value='{{item.idcategoria}}'>{{item.nombre_cate}}</ion-select-option>
              </ion-select>
             </ion-item>
