--- a/src/app/pages/goles/goles.page.html
+++ b/src/app/pages/goles/goles.page.html
@@ -4,7 +4,7 @@
     <ion-buttons slot="start">
       <ion-back-button text=" " defaultHref="/jugadores"></ion-back-button>
   </ion-buttons>
-  <ion-avatar slot="end"><img src="../assets/icon/logoLiga.png"></ion-avatar>
+  <ion-thumbnail slot="end"><img src="../assets/icon/logoLiga.png"></ion-thumbnail>
   <ion-title size="undefined" style="font-family:Times" align="center">Goles del jugador</ion-title>
   </ion-toolbar>
 </ion-header>
