--- a/src/app/pages/ingresoalineacion/ingresoalineacion.page.html
+++ b/src/app/pages/ingresoalineacion/ingresoalineacion.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button text=" " defaultHref="/inicio"></ion-back-button>
   </ion-buttons>
-  <ion-avatar slot="end"><img src="../assets/icon/logoLiga.png"></ion-avatar>
+  <ion-thumbnail slot="end"><img src="../assets/icon/logoLiga.png"></ion-thumbnail>
   <h5>
     <ion-title size="undefined" style="font-family:Times" align="center">Alineación</ion-title>
   </h5>
@@ -13,25 +13,23 @@
 
 <ion-content>
  
-  <ion-item-group>
+<!-- <ion-item-group>
     <ion-item>
         <ion-label position="floating" ></ion-label>
        <ion-select  placeholder="EQUIPOS" [(ngModel)]="idequipo" (ionChange)="cargarAlineacion()">
          <ion-select-option *ngFor="let item of lista_equipos" value='{{item.idequipo1}}'>{{item.equipo1}}</ion-select-option>
        </ion-select>
       </ion-item>
-  </ion-item-group>
-
+  </ion-item-group> -->
 <!--   //////////////////////ALINEACION////////////////////////////// -->
+
 <ion-grid>
   <ion-row>
-   <ion-col style="background-color: rgb(96, 250, 82);" text-center>ALINEACIÓN</ion-col>
+   <ion-col style="background-color: rgb(96, 250, 82);" text-center>JUGADORES EN CANCHA</ion-col>
   </ion-row>
   <ion-row >
     <ion-col>
-    
       <ion-list >
-
         <ion-item-sliding *ngFor="let item of listar_alineacion">
           <ion-item > 
             <ion-grid >
@@ -88,137 +86,11 @@
       </ion-list>
     </ion-col> 
   </ion-row>
-</ion-grid>
-
-
-
-<!-- //////////////////////NO COMBOCADOS////////////////////////////// -->
-<ion-grid>
-  <ion-row>
-   <ion-col style="background-color: rgb(225, 250, 82);" text-center>CAMBIOS</ion-col>
-  </ion-row>
-  <ion-row >
-    <ion-col>
-      <ion-list>
-        <ion-item-sliding *ngFor="let item of listar_cambios">
-          <ion-item > 
-            <ion-grid>
-              <ion-row>
-                <ion-col size="2">
-                  <ion-avatar>
-                <img [src]="url+item.fotos">
-                  </ion-avatar>
-                
-                </ion-col>
-                <ion-col size="10">
-                 <ion-label class="ion-text-wrap">
-                   <ion-text color="primary">  
-                     <h3 class="ion-text-uppercase" >{{item.nombre1+' '+item.nombre2+' '+item.apellido1+' '+item.apellido2 }}</h3>
-
-                   </ion-text>
-                   <ion-text>
-                    <h2>
-                       Cedula: {{item.cedula}}
-                    </h2>
-                  </ion-text>
-                  <ion-text color="#000000">
-                   <h2>Número de camiseta: {{item.N_camiseta}}</h2>
-                  </ion-text>
-
-               </ion-label>
-               </ion-col>
-              </ion-row> 
-            </ion-grid>  
-       </ion-item>  
-
-          <ion-item-options side="end">
-
-           <ion-grid>
-             <ion-row>
-<ion-col size="5"></ion-col> 
-<ion-col size="7"><b>LISTA DE JUGADORES</b></ion-col>
-             </ion-row>
-             <ion-row>
-               <ion-col size="3"></ion-col>
-               <ion-col size="9">
-                <ion-list *ngFor="let item2 of listar_alineacionCombo">
-                  <ion-label (click)="guardarCambios(item.idjugador,item2.idjugador)">{{item2.NOMJUGADOR}}</ion-label>
-                </ion-list>
-               </ion-col>
-             
-             </ion-row>
-           </ion-grid> 
-            
-           
-            
-           </ion-item-options>
-           
-        </ion-item-sliding>
-        
-      </ion-list>
-    </ion-col>
-  
-   
-  </ion-row>
-  
-</ion-grid>
- 
-
-
-<!-- //////////////////////CAMBIOS EN EL PARTIDO///////////////////////////// -->
-
-<ion-grid>
-  <ion-row>
-   <ion-col style="background-color: rgb(255, 0, 0);" text-center>CAMBIOS EN EL PARTIDO</ion-col>
-  </ion-row>
-  
-  <ion-card *ngFor="let item of listar_cambiosR">
-
-<H5>SALIO</H5>
-  <ion-row >
-    <ion-col>
-      <ion-list >
-        <ion-item-sliding >
-          <ion-item > 
-            <ion-grid >
-              <ion-row>
-                <ion-col size="2">
-                  <ion-avatar>
-                <img [src]="url+item.fotoentra">  
-                  </ion-avatar>
-                
-                </ion-col>
-                <ion-col size="10">
-                 <ion-label class="ion-text-wrap">
-                   <ion-text color="primary" >  
-                     <h3 class="ion-text-uppercase" >{{item.ENTRA}}</h3>
-                   </ion-text>
-                   <ion-text>
-                    <h2>
-                       Cedula: {{item.cedula}}
-                    </h2>
-                  </ion-text>
-                  <ion-text color="#000000">
-                   <h2>Número de camiseta: {{item.N_camiseta}}</h2>
-                  </ion-text>
-              </ion-label>
-               </ion-col>
-              </ion-row>
-  
-            </ion-grid>  
-       </ion-item>  
-
-        </ion-item-sliding>
-      </ion-list>
-    </ion-col> 
-  </ion-row>
-
-  <h5>ENTRO</h5>
 
   <ion-row >
     <ion-col>
       <ion-list >
-        <ion-item-sliding >
+        <ion-item-sliding *ngFor="let item of listar_cambiosR"  >
           <ion-item > 
             <ion-grid >
               <ion-row>
@@ -233,6 +105,14 @@
                    <ion-text color="primary" >  
                      <h3 class="ion-text-uppercase" >{{item.SALE}}</h3>
                    </ion-text>
+                   <ion-text>
+                    <h2>
+                       Cedula: {{item.cedulasale}}
+                    </h2>
+                  </ion-text>
+                  <ion-text color="#000000">
+                   <h2>Número de camiseta: {{item.ncSale}}</h2>
+                  </ion-text>
               </ion-label>
                </ion-col>
               </ion-row>
@@ -240,6 +120,7 @@
             </ion-grid>  
        </ion-item>  
        <ion-item-options side="end">
+         
         <ion-item-option (click)="guardarFaltas('AMARILLA',item.sale)"  color="light" >
           <ion-icon slot="icon-only" style="background-color: yellow;" ></ion-icon>Amarilla
           </ion-item-option>
@@ -264,7 +145,230 @@
       </ion-list>
     </ion-col> 
   </ion-row>
-</ion-card>
+ 
+
 </ion-grid>
 
+
+
+<!-- //////////////////////NO COMBOCADOS////////////////////////////// -->
+<ion-grid>
+  <ion-row>
+   <ion-col style="background-color: rgb(225, 250, 82);" text-center>SUPLENTES</ion-col>
+  </ion-row>
+  <ion-row >
+    <ion-col>
+      <ion-list>
+        <ion-item-sliding *ngFor="let item of listar_cambios">
+          <ion-item > 
+            <ion-grid>
+              <ion-row>
+                <ion-col size="2">
+                  <ion-avatar>
+                <img [src]="url+item.fotos">
+                  </ion-avatar>
+                </ion-col>
+                <ion-col size="10">
+                 <ion-label class="ion-text-wrap">
+                   <ion-text color="primary">  
+                     <h3 class="ion-text-uppercase" >{{item.nombre1+' '+item.nombre2+' '+item.apellido1+' '+item.apellido2 }}</h3>
+                   </ion-text>
+                   <ion-text>
+                    <h2>
+                       Cedula: {{item.cedula}}
+                    </h2>
+                  </ion-text>
+                  <ion-text color="#000000">
+                   <h2>Número de camiseta: {{item.N_camiseta}}</h2>
+                  </ion-text>
+               </ion-label>
+               </ion-col>
+              </ion-row> 
+            </ion-grid>  
+       </ion-item>  
+                    <ion-item-options side="end">
+                        <ion-grid>
+                            <ion-row>
+                                  <ion-col size="7"></ion-col> 
+                                  <ion-col 
+                                  text-lg-end 
+                                  size="5">
+                                  <b>LISTA DE JUGADORES</b>
+                                  </ion-col>
+                            </ion-row>
+                            <ion-row>
+                              <ion-col size="3"></ion-col>
+                                <ion-col size="9">
+                                  <ion-list *ngFor="let item2 of listar_alineacionCombo">
+                                      <ion-label (click)="guardarCambios(item.idjugador,item2.idjugador)">
+                                        {{item2.NOMJUGADOR}}
+                                      </ion-label>
+                                  </ion-list>
+                              </ion-col>
+                            </ion-row>
+                        </ion-grid> 
+                    </ion-item-options>
+        </ion-item-sliding>
+      </ion-list>
+    </ion-col>
+  </ion-row>
+</ion-grid>
+
+<!-- //////////////////////CAMBIOS EN EL PARTIDO///////////////////////////// -->
+<ion-grid>
+  <ion-row>
+    <ion-col style="background-color: rgb(255, 0, 0);" 
+    text-center>CAMBIOS REALIZADOS
+    </ion-col>
+  </ion-row>
+</ion-grid>
+
+<!-- <ion-grid *ngFor="let item of listar_cambiosR">
+ 
+
+<H5>SALIO</H5>
+
+  <ion-row >
+      <ion-col>
+        <ion-item-sliding>
+          <ion-item>
+            <ion-list>
+              <ion-grid >
+                <ion-row>
+                        <ion-col size="2">
+                          <ion-avatar>
+                            <img [src]="url+item.fotoentra">  
+                          </ion-avatar>
+                        </ion-col>
+                        <ion-col size="10">
+                            <ion-label class="ion-text-wrap">
+                                <ion-text color="primary" >  
+                                    <h3 class="ion-text-uppercase" >
+                                        {{item.ENTRA}}
+                                    </h3>
+                                </ion-text>
+
+                                <ion-text>
+                                  <h2>
+                                    Cedula: {{item.cedulaentra}}
+                                  </h2>
+                                </ion-text>
+
+                                <ion-text color="#000000">
+                                    <h2>
+                                      Número de camiseta: {{item.ncEntra}}
+                                    </h2>
+                                </ion-text>
+                            </ion-label>
+                        </ion-col>
+                </ion-row>
+              </ion-grid>  
+           </ion-list>
+          </ion-item>
+        </ion-item-sliding>
+      </ion-col> 
+  </ion-row>
+
+  <h5>ENTRO</h5>
+
+  <ion-row >
+    <ion-col>
+      <ion-list >
+        <ion-item-sliding >
+          <ion-item > 
+            <ion-grid >
+              <ion-row>
+                <ion-col size="2">
+                  <ion-avatar>
+                <img [src]="url+item.fotosale">  
+                  </ion-avatar>
+                
+                </ion-col>
+                <ion-col size="10">
+                 <ion-label class="ion-text-wrap">
+                   <ion-text color="primary" >  
+                     <h3 class="ion-text-uppercase" >{{item.SALE}}</h3>
+                   </ion-text>
+                   <ion-text>
+                    <h2>
+                       Cedula: {{item.cedulasale}}
+                    </h2>
+                  </ion-text>
+                  <ion-text color="#000000">
+                   <h2>Número de camiseta: {{item.ncSale}}</h2>
+                  </ion-text>
+              </ion-label>
+               </ion-col>
+              </ion-row>
+  
+            </ion-grid>  
+       </ion-item>  
+       <ion-item-options side="end">
+         
+        <ion-item-option (click)="guardarFaltas('AMARILLA',item.sale)"  color="light" >
+          <ion-icon slot="icon-only" style="background-color: yellow;" ></ion-icon>Amarilla
+          </ion-item-option>
+        <ion-item-option (click)="guardarFaltas('ROJA',item.sale)"  color="light" >
+          <ion-icon color="danger" style="background: red;" slot="icon-only" ></ion-icon>Roja
+          </ion-item-option>
+        </ion-item-options>
+
+        <ion-item-options side="start">
+          <ion-item-option  (click)="leerQr( item.cedula, item.nombre1, item.apellido1)" color="light">
+            <ion-icon name="checkmark-circle"  slot="icon-only" color="success" ></ion-icon>Verificar
+           <hr/>
+           
+          </ion-item-option>
+          <ion-item-option (click)="guardarGol(item.sale)" color="light">
+            <ion-icon  name="football"  slot="icon-only" color="dark"  ></ion-icon>Ingresar Gol
+           <hr/>
+           
+          </ion-item-option>
+        </ion-item-options>
+        </ion-item-sliding>
+      </ion-list>
+    </ion-col> 
+  </ion-row>
+</ion-grid> -->
+
+<ion-grid>
+  <ion-row>
+    <ion-col text-center size="2">MIN.</ion-col>
+    <ion-col text-center size="5"> SALIO</ion-col>
+    <ion-col text-center size="5">ENTRO</ion-col>
+  </ion-row>
+</ion-grid>
+
+<ion-grid *ngFor="let item of listar_cambiosR">
+  <ion-row>
+
+    <ion-col text-center size="2">
+    9
+    </ion-col>
+
+    <ion-col text-center size="5">
+      
+                      <ion-text
+                      text-justify
+                      class="ion-text-wrap"
+                      color="primary" >  
+                      {{item.ENTRA}}
+                      </ion-text>    
+    </ion-col>
+
+    <ion-col text-center size="5">    
+                 <ion-text    
+                 text-justify
+                 class="ion-text-wrap"
+                 color="primary">
+                 {{item.SALE}}
+                  </ion-text>
+    </ion-col>
+  </ion-row>
+  
+
+
+
+
+</ion-grid>
 </ion-content>
