--- a/src/app/pages/jugadores/jugadores.page.html
+++ b/src/app/pages/jugadores/jugadores.page.html
@@ -4,7 +4,7 @@
         <ion-buttons slot="start">
             <ion-back-button text=" " defaultHref="/inicio"></ion-back-button>
         </ion-buttons>
-        <ion-avatar slot="end"><img src="../assets/icon/logoLiga.png"></ion-avatar>
+        <ion-thumbnail slot="end"><img src="../assets/icon/logoLiga.png"></ion-thumbnail>
         <ion-title size="undefined" style="font-family:Times" align="center">Jugadores</ion-title>
     </ion-toolbar>
     <!-- BUSCAR JUGADOR -->
