--- a/src/app/pages/listagoleadores/listagoleadores.page.html
+++ b/src/app/pages/listagoleadores/listagoleadores.page.html
@@ -4,7 +4,7 @@
       <ion-buttons slot="start">
           <ion-back-button text=" " defaultHref="/inicio"></ion-back-button>
       </ion-buttons>
-      <ion-avatar slot="end"><img src="../assets/icon/logoLiga.png"></ion-avatar>
+      <ion-thumbnail slot="end"><img src="../assets/icon/logoLiga.png"></ion-thumbnail>
       <ion-title size="undefined" style="font-family:Times" align="center">Top de goleadores</ion-title>
   </ion-toolbar>
   <ion-toolbar>
@@ -13,7 +13,7 @@
   <ion-grid>
     <ion-label size="undefined" style="font-family:'Franklin Gothic Medium'">FILTROS</ion-label>
     <ion-row>
-    
+<!--     
       <ion-col size="6">
         <ion-list>
           
@@ -26,14 +26,17 @@
                 </ion-item>
             </ion-item-group>
         </ion-list>
-      </ion-col>
+      </ion-col> 
+      para bloquear combo de abajo
+    *ngIf="combo_categoria.length > 0"
+    -->
 
       <ion-col size="6">
         <ion-list>
           <ion-item-group>
               <ion-item>
                   <ion-label position="floating" ></ion-label>
-                 <ion-select  placeholder="CATEGORIA" *ngIf="combo_categoria.length > 0" [(ngModel)]="idcategoria" (ionChange)="cargaGoleadores()" >
+                 <ion-select  placeholder="CATEGORIA" [(ngModel)]="idcategoria" (ionChange)="cargaGoleadores()" >
                    <ion-select-option *ngFor="let item of combo_categoria" value='{{item.idcategoria}}' >{{item.nombre_cate}}</ion-select-option>
                  </ion-select>
                 </ion-item>
