--- a/src/app/pages/listagoleadores/listagoleadores.page.html
+++ b/src/app/pages/listagoleadores/listagoleadores.page.html
@@ -11,7 +11,7 @@
     <!-- FILTROS -->
    
   <ion-grid>
-    <ion-label size="undefined" style="font-family:'Franklin Gothic Medium'">FILTROS</ion-label>
+    <ion-label text-center size="undefined" style="font-family:'Franklin Gothic Medium'">FILTRAR POR CATEGORIA</ion-label>
     <ion-row>
 <!--     
       <ion-col size="6">
@@ -30,8 +30,7 @@
       para bloquear combo de abajo
     *ngIf="combo_categoria.length > 0"
     -->
-
-      <ion-col size="6">
+      <ion-col>
         <ion-list>
           <ion-item-group>
               <ion-item>
