--- a/src/app/pages/faltasequipo/faltasequipo.page.html
+++ b/src/app/pages/faltasequipo/faltasequipo.page.html
@@ -7,9 +7,9 @@
         <ion-thumbnail slot="end"><img src="../assets/icon/logoLiga.png"></ion-thumbnail>
         <ion-title size="undefined" style="font-family:Times" align="center">Tarjetas del Equipo</ion-title>
   </ion-toolbar>
- <!-- BUSCAR POR FALTAS -->
+ <!-- BUSCAR POR JUGADOR -->
  <ion-toolbar>
-    <ion-searchbar animated placeholder="Buscar por tipo de tarjeta"
+    <ion-searchbar animated placeholder="Buscar por nombre de Jugador"
     (ionChange)="buscar($event)">
     </ion-searchbar>
  </ion-toolbar>
@@ -18,14 +18,13 @@
 <ion-content>
    
    <ion-list>
-     <ion-card *ngFor="let item of liga | buscador:buscarFalta: 'nombrefalta'">
+     <ion-card *ngFor="let item of liga | buscador:buscarJugador: 'nombreJ'">
       <ion-grid>
          <ion-row>
             <ion-col size="2">
              
-               <ion-img [src]="url+item.fotos"></ion-img>
+            <ion-img [src]="url+item.fotos"></ion-img>
             
-              
             </ion-col>
             <ion-col size="10">
               <ion-label class="ion-text-wrap">
