--- a/src/app/pages/carnets/carnets.page.html
+++ b/src/app/pages/carnets/carnets.page.html
@@ -81,7 +81,7 @@
     <ion-col size="3">
       <ion-row> <br> </ion-row>
          <ion-row>
-          <ion-img style="height: 100px;" [src]="url+item.fotos"></ion-img>
+          <ion-img style="height: 100px;" [src]="url+item.fotoos"></ion-img>
       </ion-row>
       <ion-row  >
         <ion-col style="font-family:Times" size="7">
