--- a/src/app/pages/jugadores/jugadores.page.html
+++ b/src/app/pages/jugadores/jugadores.page.html
@@ -26,7 +26,7 @@
               <ion-row> <br> </ion-row>
               <ion-row> <br> </ion-row>
               
-                <img [src]="url+item.fotos">
+                <img [src]="url+item.fotoos">
             
              </ion-col>
 
