--- a/src/app/pages/equipos/equipos.page.html
+++ b/src/app/pages/equipos/equipos.page.html
@@ -54,7 +54,7 @@
                <ion-row>
                  <ion-col size="2">
                    <ion-avatar>
-                    <img [src]="url+item.foto">
+                    <img [src]="url+item.fotoo">
                    </ion-avatar>
                  
                  </ion-col>
