--- a/src/app/pages/faltasequipo/faltasequipo.page.html
+++ b/src/app/pages/faltasequipo/faltasequipo.page.html
@@ -23,7 +23,7 @@
          <ion-row>
             <ion-col size="2">
              
-            <ion-img [src]="url+item.fotos"></ion-img>
+            <ion-img [src]="url+item.fotoos"></ion-img>
             
             </ion-col>
             <ion-col size="10">
