--- a/src/app/pages/perfil-arbi/perfil-arbi.page.html
+++ b/src/app/pages/perfil-arbi/perfil-arbi.page.html
@@ -16,13 +16,17 @@
         <ion-label><h1 text-center>PERFIL DEL ARBITRO</h1></ion-label>
         
        <ion-grid>
-         <ion-row>
+         
+        <ion-row>
+          <ion-col size="3"></ion-col>
+            <ion-col size="6">
+              <ion-card> 
+                        <img [src]="url+fotoss" >
+              </ion-card>
+            </ion-col>
+            <ion-col size="3"></ion-col>
+          </ion-row>
 
-           <ion-col size="4"></ion-col>
-          <ion-card> <ion-col size="4"> <img [src]="url+fotoss" ></ion-col></ion-card>
-           <ion-col size="4" ></ion-col>
-          
-        </ion-row>
        </ion-grid>
          
   
