--- a/src/app/pages/calendario/calendario.page.scss
+++ b/src/app/pages/calendario/calendario.page.scss
@@ -3,7 +3,7 @@
 }
 .buttonss{
     background: transparent;
-    border: solid 1px white;
+    border: solid 1px #045323;
     border-radius: 5px;
     box-sizing: unset;
     box-shadow: none !important;
