--- a/src/app/pages/carnetjugador/carnetjugador.page.html
+++ b/src/app/pages/carnetjugador/carnetjugador.page.html
@@ -94,7 +94,7 @@
       <ion-row> <br> </ion-row>
          <ion-row>
        
-          <ion-img style="height: 100px;" [src]="url+item.fotoos"></ion-img>
+          <ion-img style="height: 100px;" [src]="url+item.fotos"></ion-img>
         
       </ion-row>
       <ion-row  >
