--- a/src/app/pages/perfil-arbi/perfil-arbi.page.html
+++ b/src/app/pages/perfil-arbi/perfil-arbi.page.html
@@ -10,6 +10,7 @@
 </ion-header>
 
 <ion-content>
+
   <ion-card>
     <ion-list>
       
@@ -29,16 +30,28 @@
 
        </ion-grid>
          
-  
-  
-      <ion-item >
-         <ion-label>NOMBRE: {{nombre}} {{apellido}} </ion-label>
-            
-       </ion-item>
-       <ion-item>
+         <ion-item>
          <ion-label >CEDULA: {{cedula}}</ion-label>
         
        </ion-item>
+      
+
+       
+       <ion-item>
+        <ion-label>NOMBRE:</ion-label>
+        <ion-input 
+          
+        type="text"
+        [(ngModel)]="nombre">
+      </ion-input>
+       
+        
+      </ion-item>
+      <ion-item>
+        <ion-label>APELLIDO:</ion-label>
+        <ion-input type="text" [(ngModel)]="apellido"></ion-input>
+        
+      </ion-item>
        <ion-item>
          <ion-label>DIRECCIÓN:</ion-label>
          <ion-input type="text" [(ngModel)]="direccion"></ion-input>
@@ -49,14 +62,16 @@
          <ion-input type="text" maxlength="9" [(ngModel)]="telefono"></ion-input>
        </ion-item>
        <ion-item>
-         <ion-label>CELULAR: </ion-label>
-         <ion-input type="text" [(ngModel)]="celular"></ion-input>
+         <ion-label class="stackend" >CELULAR: </ion-label>
+         <ion-input type="numeric" maxlength="10" [(ngModel)]="celular"></ion-input>
        </ion-item>
        <ion-item>
          <ion-label>CORREO: </ion-label>
-         <ion-input type="text" [(ngModel)]="correo"></ion-input>
+         <ion-input
+       
+         type="email" [(ngModel)]="correo"></ion-input>
        </ion-item>
-     
+ 
     </ion-list>
        
   </ion-card>
