--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
         
            
           
-                <ion-title style="font-family:Times" id='titulo' name='titulo'></ion-title>
+                <ion-title size="small" style="font-family:Times" id='titulo' name='titulo'></ion-title>
                 
           
                      
